--- a/backend/package.json
+++ b/backend/package.json
@@ -15,9 +15,13 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "mongoose": "^9.1.3",
-    "omre-platform": "file:.."
+    "omre-platform": "file:..",
+    "pg": "^8.17.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
+    "eslint": "^9.39.2",
+    "globals": "^17.2.0",
     "nodemon": "^3.1.11"
   }
 }
